--- a/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Disclosure/Actionsheet/index.stories.mdx
@@ -81,7 +81,7 @@ function App(){
 This command copies the `Actionsheet` component to your project.
 
 ```bash
-gluestack-ui add actionsheet
+npx gluestack-ui add actionsheet
 ```
 
 ## Import
