--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -63,7 +63,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Alert` component to your project.
 
 ```bash
-gluestack-ui add alert
+npx gluestack-ui add alert
 ```
 
 ## Import
