--- a/example/storybook/src/components/Feedback/Progress/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Progress/index.stories.mdx
@@ -50,7 +50,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Progress` component to your project.
 
 ```bash
-gluestack-ui add progress
+npx gluestack-ui add progress
 ```
 
 ## Import
