--- a/example/storybook/src/components/Feedback/Toast/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Toast/index.stories.mdx
@@ -80,7 +80,7 @@ function App() {
 This command copies the `Toast` component to your project.
 
 ```bash
-gluestack-ui add toast
+npx gluestack-ui add toast
 ```
 
 ## Import
