--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -57,7 +57,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Button` component to your project.
 
 ```jsx
-gluestack-ui add button
+npx gluestack-ui add button
 ```
 
 ## Import
