--- a/example/storybook/src/components/Forms/Link/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Link/index.stories.mdx
@@ -57,7 +57,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Link` component to your project.
 
 ```bash
-gluestack-ui add link
+npx gluestack-ui add link
 ```
 
 ## Import
