--- a/example/storybook/src/components/Forms/Slider/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Slider/index.stories.mdx
@@ -62,7 +62,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Slider` component to your project.
 
 ```bash
-gluestack-ui add slider
+npx gluestack-ui add slider
 ```
 
 ## Import
