--- a/example/storybook/src/components/Layout/Box/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Box/index.stories.mdx
@@ -61,7 +61,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Box` component to your project.
 
 ```bash
-gluestack-ui add box
+npx gluestack-ui add box
 ```
 
 ## Import
