--- a/example/storybook/src/components/Layout/VStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/VStack/index.stories.mdx
@@ -59,7 +59,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `VStack` component to your project.
 
 ```bash
-gluestack-ui add vstack
+npx gluestack-ui add vstack
 ```
 
 ## Import
