--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -37,7 +37,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Icon` component to your project.
 
 ```jsx
-gluestack-ui add icon
+npx gluestack-ui add icon
 ```
 
 ## Usage
