--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -32,7 +32,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Fab` component to your project.
 
 ```jsx
-gluestack-ui add fab
+npx gluestack-ui add fab
 ```
 
 ## Import
