--- a/example/storybook/src/components/Overlay/Menu/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Menu/index.stories.mdx
@@ -89,7 +89,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Menu` component to your project.
 
 ```bash
-gluestack-ui add menu
+npx gluestack-ui add menu
 ```
 
 ## Import
