--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -98,7 +98,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Popover` component to your project.
 
 ```jsx
-gluestack-ui add popover
+npx gluestack-ui add popover
 ```
 
 ## Import
