--- a/example/storybook/src/getting-started/SSR/index.stories.mdx
+++ b/example/storybook/src/getting-started/SSR/index.stories.mdx
@@ -31,11 +31,11 @@ module.exports = withGluestackUI({
 To add a gluestack-ui component to your project, you can use the following command:
 
 ```bash
-npx gluestack-ui add button
+npx npx gluestack-ui add button
 ```
 
 This command will add the button component to your project and configure it for server-side rendering using the withGluestackUI adapter.
 
 Once you have added the component and configured your project, you can use the component in your application like any other React component. When the component is rendered server-side, it will be pre-rendered on the server and sent to the client as HTML.
 
-In summary, gluestack-ui components can be easily rendered server-side using Next.js or any other server-side rendering framework. To get started, simply add the component to your project using the npx gluestack-ui add command, and use the withGluestackUI adapter to configure your project for server-side rendering.
+In summary, gluestack-ui components can be easily rendered server-side using Next.js or any other server-side rendering framework. To get started, simply add the component to your project using the npx npx gluestack-ui add command, and use the withGluestackUI adapter to configure your project for server-side rendering.
