--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -63,7 +63,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Checkbox` component to your project.
 
 ```bash
-gluestack-ui add checkbox
+npx gluestack-ui add checkbox
 ```
 
 ## Import
