--- a/example/storybook/src/components/Forms/Select/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Select/index.stories.mdx
@@ -66,7 +66,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Select` component to your project.
 
 ```bash
-gluestack-ui add select
+npx gluestack-ui add select
 ```
 
 ## Import
