--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -53,7 +53,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Center` component to your project.
 
 ```bash
-gluestack-ui add center
+npx gluestack-ui add center
 ```
 
 ## Import
