--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -55,7 +55,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Divider` component to your project.
 
 ```bash
-gluestack-ui add divider
+npx gluestack-ui add divider
 ```
 
 ## Import
