--- a/example/storybook/src/components/Layout/HStack/index.stories.mdx
+++ b/example/storybook/src/components/Layout/HStack/index.stories.mdx
@@ -59,7 +59,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `HStack` component to your project.
 
 ```bash
-gluestack-ui add hstack
+npx gluestack-ui add hstack
 ```
 
 ## Import
