--- a/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Tooltip/index.stories.mdx
@@ -75,7 +75,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Tooltip` component to your project.
 
 ```jsx
-gluestack-ui add tooltip
+npx gluestack-ui add tooltip
 ```
 
 ## Import
