--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -22,7 +22,7 @@ import Wrapper from '../../Wrapper';
 This command copies the `Provider` component to your project.
 
 ```jsx
-gluestack-ui add provider
+npx gluestack-ui add provider
 ```
 
 <br />
