--- a/example/storybook/src/getting-started/Fonts/index.stories.mdx
+++ b/example/storybook/src/getting-started/Fonts/index.stories.mdx
@@ -2,52 +2,157 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Overview/Fonts" />
 
-# Using Fonts
+## Fonts
 
-Fonts can be loaded into your project either by using Font plugin from [@dank-style/react]("https://dank.style/") or by configuring you app using google fonts, then directly using the font in gluestack config file.
+When you want to use a specific font in your application, you have to follow two steps to make it work.
 
-## Font Plugin
+1. Load the font in your application
+2. Apply the font in your application
 
-[@dank-style/react]("https://dank.style/") exports `createStyled` and `FontResolver` functions which takes any Component as first parameter and applies the passed font with given font Weight, Size, Style to the component.
+## Loading fonts
 
-## First Step
+### **For Expo projects**
 
-For the font to work, we need to load that font in that app.
+To load **expo-google-fonts** in Expo, we have to follow following steps:
 
-### For Next.js
+1. Install `expo-font` package.
 
-To load font in Next.js
+```bash
+yarn add expo-font
+```
 
-- Add import of font in global css file
-- Link font using link tag in `<Head/>` in `_document.tsx` file
-- Add font file locally in public folder and use @fontface in css file
+2. Import `useFonts` function from `expo-font` package.
 
-### For Expo
+```bash
+import { useFonts } from 'expo-font';
+```
 
-To load font in Expo use useFonts function from [expo-font]("https://docs.expo.dev/guides/using-custom-fonts/#using-a-custom-font").
+3. Install the font you want to use from `expo-google-fonts` in your application, for example, `Inter` font.
 
-## Second Step
+```bash
+yarn add @expo-google-fonts/inter
+```
 
-### Usage
+4. Import the font from `expo-google-fonts` package, for example, `Inter` font.
 
-To apply fonts to the Text Component we need to add config, this will return Text component with font styles added for both expo and Next.js .
+Check [this]("https://github.com/expo/google-fonts/") for all the available fonts.
 
-Update the index.tsx file in `components/core/index.tsx` with below code:
+```bash
+import {
+  Inter_400Regular,
+  Inter_500Medium,
+  Inter_600SemiBold,
+  Inter_700Bold,
+  Inter_900Black,
+} from "@expo-google-fonts/inter";
+```
 
-```jsx
-import { Root as Text } from './styled-components';
+5. Load the font in your application.
+
+```bash
+ const [fontsLoaded] = useFonts({
+    Inter_400Regular,
+    Inter_500Medium,
+    Inter_600SemiBold,
+    Inter_700Bold,
+    Inter_900Black,
+  });
+```
+
+To load **local-fonts** in Expo application, we have to follow following steps:
+
+1. Download the font files in the `assets` folder.
+2. Install `expo-font` package.
+
+```bash
+yarn add expo-font
+```
+
+3. Import `useFonts` function from `expo-font` package.
+
+```bash
+import { useFonts } from 'expo-font';
+```
+
+4. Load the font in your application.
+
+```bash
+ const [fontsLoaded] = useFonts({
+    'Inter-Black': require('./assets/fonts/Inter-Black.otf'),
+  });
+```
+
+### **For Next.js projects**
+
+To load **google-fonts** in Next.js application, we have to follow following steps:
+
+1. Go to [Google Fonts]("https://fonts.google.com/") and select the font you want to use in your application.
+2. Click on the font and select the font weight and style you want to use.
+3. Click on the `+` icon to add the font to your project.
+4. Click on the `Select this style` button.
+5. Click on the `Embed` button.
+6. Copy the `@import` link and paste it in the `global.css` file in the `styles` folder.
+   or
+   Copy the style link embeds and paste it in the `Head` tag in the `_document.tsx` or `index.tsx` file.
+
+To load **local-fonts** in Next.js application, we have to follow following steps:
+
+1. Download the font files in the `assets` folder.
+2. Add the css to attach font files to the font family in the `global.css` file in the `styles` folder.
+
+```bash
+@font-face {
+  font-family: "Rubik";
+  src: url('../assets/rubik/Rubik-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Rubik";
+  src: url('../asset/rubik/Rubik-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+```
+
+## Applying fonts in your application
+
+You already have the font loaded in your application, now you can apply the font in your application.
+Add the font name in the `gluestack.config.js` file in the `fonts` object.
+
+```bash
+ fonts: {
+        heading: "inter",
+        body: "inter",
+        mono: "monospace",
+      },
+```
+
+## Advance concepts for fonts in gluestack-ui
+
+In gluestack-ui, components are styled using `styled` provided by `@dank-style/react` package, [check here]('https://dank.style/').
+This package provides a way to add plugins using `createStyled` function.
+
+```bash
 import { createStyled, FontResolver } from '@dank-style/react';
 
-const styledFonts = createStyled([new FontResolver()]);
+// const fontMapper = (style: any) => {
+// };
 
-const StyledText = styledFonts(Text, {
+const styled: any = createStyled([
+  new FontResolver({
+    // mapFonts: fontMapper,
+  }),
+]);
+
+const StyledText = styled(Text, {
   fontFamily: 'Smokum',
   fontWeight: 400,
   fontStyle: 'regular',
   fontSize: '$xl',
 });
-
-export { StyledText as Text };
 ```
+
+You can use this `styled` function which has the font plugin added to it to style your components. For gluestack-ui components, we have used this styled function to style the components.
 
 Similarly, we can pass font styles to any component and then use the returned component (with font styles added).
