feat: applying fonts

--- a/example/storybook/src/getting-started/Fonts/index.stories.mdx
+++ b/example/storybook/src/getting-started/Fonts/index.stories.mdx
@@ -1,8 +1,16 @@
+---
+title: gluestack-ui Fonts | Loading and applying fonts in gluestack-ui
+
+description: This shows how we can apply fonts in gluestack-ui in Next.js and Expo projects.
+
+pageTitle: Fonts
+
+pageDescription: This shows how we can apply fonts in gluestack-ui in Next.js and Expo projects.
+---
+
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Overview/Fonts" />
-
-## Fonts
 
 When you want to use a specific font in your application, you have to follow two steps to make it work.
 
