fix: fonts dir fix

--- a/example/storybook/src/getting-started/Fonts/index.stories.mdx
+++ b/example/storybook/src/getting-started/Fonts/index.stories.mdx
@@ -10,7 +10,7 @@ pageDescription: This shows how we can apply fonts in gluestack-ui in Next.js an
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
-<Meta title="Overview/Fonts" />
+<Meta title="Getting Started/Fonts" />
 
 When you want to use a specific font in your application, you have to follow two steps to make it work.
 
