--- a/example/storybook/src/components/Layout/Center/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Center/index.stories.mdx
@@ -81,7 +81,7 @@ export default () => (
 
 ### Center
 
-It inherits all the properties of React Native's [Center](https://reactnative.dev/docs/center#props) component.
+It inherits all the properties of React Native's [Center](https://reactnative.dev/docs/view#props) component.
 
 <br />
 <br />
