fix: fonts heading added

--- a/example/storybook/src/getting-started/Fonts/index.stories.mdx
+++ b/example/storybook/src/getting-started/Fonts/index.stories.mdx
@@ -12,6 +12,8 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 <Meta title="Getting Started/Fonts" />
 
+# Fonts
+
 When you want to use a specific font in your application, you have to follow two steps to make it work.
 
 1. Load the font in your application
