--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -20,7 +20,7 @@ To get started with gluestack-ui, you can install it using `npx` to do initial s
 
 ## Initialiser (Step 1)
 
-To do initial setup run:
+To do the initial setup run:
 
 ```bash
 npx gluestack-ui
@@ -29,7 +29,7 @@ npx gluestack-ui
 
 This will:
 
-- Check if gluestack-ui is installed in project, if not it will create a `gluestack.config.ts` file which will have default theme.
+- Check if gluestack-ui is installed in the project, if not it will create a `gluestack.config.ts` file which will have the default theme.
 - It will create `GluestackUIProvider` (Wrapper component)
 - Installs the required dependencies
   - @dank-style/react
@@ -67,7 +67,7 @@ For components to work properly we need to wrap our components with `<GluestackU
 
 ### Next.js Projects
 
-For Next.js Projects update \_app.tsx with below code:
+For Next.js Projects update \_app.tsx with the below code:
 
 ```jsx
 import { GluestackUIProvider } from '@/components';
@@ -86,7 +86,7 @@ export default function App({ Component, pageProps }: AppProps) {
 
 ### Expo Projects
 
-For Expo Projects update App.tsx with below code:
+For Expo Projects update App.tsx with the below code:
 
 ```jsx
 import { StatusBar } from 'expo-status-bar';
@@ -106,6 +106,7 @@ export default function App() {
 ```
 
 ## Commands provided by gluestack-ui
+
 
 ### Init gluestack-ui
 
@@ -147,7 +148,7 @@ This will render a button component that can be clicked and will display an aler
 
 # For Next.js Projects
 
-It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for Next.js projects we require `@gluestack/ui-next-adapter` as a dependency and update \_document.js with below code:
+It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file. So, for Next.js projects we require `@gluestack/ui-next-adapter` as a dependency and update \_document.js with the below code:
 
 ```jsx
 import * as React from 'react';
@@ -197,4 +198,4 @@ module.exports = withGluestackUI(nextConfig);
 In this guide, we've walked you through the process of installing gluestack-ui and adding a Button component to your project using the npx command. With gluestack-ui, you can benefit from a library of accessible and composable UI components that work seamlessly on mobile and web platforms.
 
 The library follows WAI-ARIA authoring practices guidelines, making it accessible to a wide range of users.
-It provides both controlled and uncontrolled options for maximum flexibility. The focus is fully managed and customizable, and the dismissing and layering behavior can be highly customized as well. With gluestack-ui, you can create high-quality UI components with ease.
+It provides both controlled and uncontrolled options for maximum flexibility. The focus is fully managed and customizable, and the dismissing and layering behaviour can be highly customized as well. With gluestack-ui, you can create high-quality UI components with ease.
