--- a/example/storybook/src/getting-started/SSR/index.stories.mdx
+++ b/example/storybook/src/getting-started/SSR/index.stories.mdx
@@ -9,7 +9,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Server-side rendering (SSR)
 
-Server-side rendering (SSR) is a technique that enables rendering of web pages on the server before sending them to the browser. SSR can help improve the performance of web applications by reducing the time it takes for the first page to load, enhancing SEO, and improving accessibility.
+Server-side rendering (SSR) is a technique that enables the rendering of web pages on the server before sending them to the browser. SSR can help improve the performance of web applications by reducing the time it takes for the first page to load, enhancing SEO, and improving accessibility.
 
 gluestack-ui components are built on top of React Native Web and `@dank-style/react`, and can be rendered server-side using Next.js or any other server-side rendering framework.
 
