--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -39,7 +39,7 @@ We alse broke down the library into two separate libraries for two different res
 
 gluestack-ui and React Native Web aren’t directly comparable as they are different.
 
-While React Native and React Native Web can be used to create cross-platform applications, they require developers to write platform-specific code and to customize their components for accessibility and performance. gluestack-ui provides a different approach by offering a set of universal, styled, and accessible components that work seamlessly on both web and mobile platforms.
+While React Native and React Native Web can be used to create cross-platform applications, they require developers to write platform-specific code and customize their components for accessibility and performance. gluestack-ui provides a different approach by offering a set of universal, styled, and accessible components that work seamlessly on both web and mobile platforms.
 
 By using gluestack-ui, developers can create accessible and user-friendly interfaces with a consistent design language without worrying about the underlying platform. The focus on accessibility and performance means that developers can achieve a high level of usability with minimal effort.
 
