fix: removed external option in link

--- a/example/storybook/src/components/Typography/Text/index.stories.mdx
+++ b/example/storybook/src/components/Typography/Text/index.stories.mdx
@@ -73,7 +73,7 @@ export default () => <Text></Text>;
 
 ### Text
 
-It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props){:target="_blank" rel="noopener"} component.
+It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
 
 <br />
 <br />
