--- a/example/storybook/src/components/Provider/Provider/index.stories.mdx
+++ b/example/storybook/src/components/Provider/Provider/index.stories.mdx
@@ -99,7 +99,7 @@ export default () => (
 
 ### Provider
 
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props){:target="_blank" rel="noopener"} component.
+It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
 <br />
 <br />
