fix: content and example changes

--- a/example/storybook/src/components/Feedback/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Alert/index.stories.mdx
@@ -92,8 +92,7 @@ export default () => (
 
 ### Alert
 
-Contains all alert related layout style props and actions.
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/pressable#props) component.
+Contains all alert related layout style props and actions. It inherits all the properties of React Native's [View](https://reactnative.dev/docs/pressable#props) component.
 
 ### Alert.Icon
 
@@ -101,8 +100,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
 
 ### Alert.Text
 
-Contains all spinner related layout style props and actions.
-It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
+Contains all spinner related layout style props and actions. It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
 
 <br />
 <br />
@@ -117,7 +115,7 @@ It inherits all the properties of React Native's [Text](https://reactnative.dev/
     showArgsController={false}
     metaData={{
       code: `
-  <VStack space="md" w="100%" justifyContent="center" alignItems="center">
+  <VStack space="md" w="100%" justifyContent="center" alignItems="center" px="$4">
         <Alert action="info">
           <Alert.Icon>
             <Icon as={InfoIcon} />
