--- a/example/storybook/src/components/Layout/Divider/index.stories.mdx
+++ b/example/storybook/src/components/Layout/Divider/index.stories.mdx
@@ -94,7 +94,7 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     showArgsController={false}
     metaData={{
       code: `
-<HStack>
+<HStack mb="$5">
   <Text>Simple</Text>
   <Divider
     variant="vertical"
