--- a/example/storybook/src/components/Forms/Button/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Button/index.stories.mdx
@@ -88,8 +88,7 @@ export default () => (
 
 ### Button
 
-Contains all button related layout style props and actions.
-It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
+Contains all button related layout style props and actions. It inherits all the properties of React Native's [Pressable](https://reactnative.dev/docs/pressable#props) component.
 
 <AppProvider>
   <Table>
@@ -196,13 +195,11 @@ It inherits all the properties of React Native's [Pressable](https://reactnative
 
 ### Button.Text
 
-Contains all text related layout style props and actions.
-It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
+Contains all text related layout style props and actions. It inherits all the properties of React Native's [Text](https://reactnative.dev/docs/text#props) component.
 
 ### Button.Group
 
-Contains all group related layout style props and actions.
-It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
+Contains all group related layout style props and actions. It inherits all the properties of React Native's [View](https://reactnative.dev/docs/view#props) component.
 
 <AppProvider>
   <Table>
@@ -398,7 +395,7 @@ It inherits all the properties of React Native's [ActivityIndicator](https://rea
   <Button>
     <Button.Text>Button 1</Button.Text>
   </Button>
-  <Button bg="$blue500">
+  <Button mx="$4">
     <Button.Text>Button 2</Button.Text>
   </Button>
   <Button>
