--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -9,9 +9,9 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Introduction
 
-**Customizable Components for React, Next.js & React Native with Optional Styling.**
+Customizable Components for React, Next.js & React Native with Optional Styling.
 
-**gluestack-ui is a universal UI library that provides optionally styled and accessible components. These components are designed for easy integration into applications developed with React and React Native.**
+gluestack-ui is a universal UI library that provides optionally styled and accessible components. These components are designed for easy integration into applications developed with React and React Native.
 
 ## Why we built gluestack-ui?
 
